--- a/index.html
+++ b/index.html
@@ -1,40 +1,52 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>jQuery Forms</title>
+      <title>Angular Forms</title>
       <!-- <script type="text/javascript" src="../vendor/jquery-3.0.0.min.js"></script> -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-      <script type="text/javascript" src="forms.js"></script>
+      <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
+
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+      <!-- <script type="text/javascript" src="forms.js"></script> -->
+      <script src="formOnSteroid.js"></script>
       <link rel="stylesheet" href="form-style.css" />
   </head>
-  <body>
-    <h1>jQuery Forms</h1>
+  <body ng-app="myApp" ng-controller="employeeController">
+    <h1>Angular Forms</h1>
     <div>
-      <form id="employeeinfo">
+      <form id="employeeinfo"  >
         <label for="employeefirstname">Employee First Name:</label>
-        <input type="text" id="employeefirstname" name="employeefirstname" />
-
+        <input ng-model="employee.firstname" type="text" id="employeefirstname" name="employeefirstname" />
         <label for="employeelastname">Employee Last Name:</label>
-        <input type="text" id="employeelastname" name="employeelastname" />
+        <input ng-model="employee.lastname" type="text" id="employeelastname" name="employeelastname" />
 
         <label for="employeeid">Employee ID:</label>
-        <input type="text" id="employeeid" name="employeeid" />
+        <input ng-model="employee.id" type="text" id="employeeid" name="employeeid" />
 
         <label for="jobtitle">Job title:</label>
-        <input type="text" id="jobtitle" name="jobtitle" />
+        <input ng-model="employee.jobtitle"  type="text" id="jobtitle" name="jobtitle" />
 
         <label for="salary">Salary:</label>
-        <input type="number" id="salary" name="salary" />
+        <input ng-model="employee.salary" type="number" id="salary" name="salary" />
 
-        <input type="submit" value="Submit Employee" />
+        <input ng-click="AddInfo()" type="submit" value="Submit Employee" />
         
       </form>
     </div>
     <div id="container">
       <h2>Container</h2>
+      <div ng-repeat="employee in employees">
+        <p>First Name: {{employee.firstname}} Last Name: {{employee.lastname}} ID : {{employee.id}} Jobtitle: {{employee.jobtitle}} Salary: {{employee.salary}}</p>
+        <button ng-click="DeleteInfo()" >Delete</button>
+      </div>
+
     </div>
-    <div class="totalSalary">
+    <div>
+      <h1>Total Salary</h1>
+      <div class="totalSalary" >
+      <p>{{total}}</p>
+      </div>
     </div>
+    
     <!-- <button id="deleteThis">delete</button> -->
 
 
